--- a/_config.yml
+++ b/_config.yml
@@ -263,7 +263,7 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['implementation','reading','computer-vision','misc'] # this tags will be dispalyed on the front page of your blog
+display_tags: [] # this tags will be dispalyed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
@@ -271,8 +271,8 @@ display_tags: ['implementation','reading','computer-vision','misc'] # this tags 
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Kim]
+  first_name: [Boosung]
 
   style: apa
   locale: en
