fixed string in cv

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -16,7 +16,7 @@
   type: time_table
     - title: B.S. in Math and Computer Science
       institution: Dickinson College, Carlisle, US
-      year: 2025
+      year: Expected 2025
       description:
         - Full ride scholarship
         - Selected Coursework - Data Structures and Algorithms, Computing Abstractions, Linear Algebra, Deep Learning Specialization (Coursera), Large Scale Open Source Software Development, Probability and Statistics I & II
