attempt at fixing error on cv.yml

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -14,7 +14,7 @@
 
 - title: Education
   type: time_table
-    - title: B.S. in Math and Computer Science
+    - title: PhD
       institution: Dickinson College, Carlisle, US
       year: Expected 2025
       description:
