added pdf view instructions and link

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,4 +1,5 @@
-- contents: Click on the blue PDF icon above to download the PDF version of my resume!
+- title: PDF Version
+  contents: Click on the blue PDF icon above to view the PDF version of my resume! Or <a href="http://boosungkim.com/assets/pdf/boosungkim-resume.pdf">click here</a>.
 
 - title: General Information
   type: map
